# badminton-elo

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  PRD.md  docker-compose.local.yml  docker-compose.yml  pyproject.toml  requirements.txt
apps/api/: apps.py  elo.py  predict.py  reconcile.py  refresh.py  serializers.py  urls.py  views.py
apps/api/templates/: reconcile.html
apps/ingest/: admin.py  apps.py  cup_events.py  h2h.py  models.py  normalize.py  schemas.py  wiki_client.py  wiki_parse.py
apps/ingest/api/: client.py  endpoints.py
apps/ingest/migrations/: 0001_initial.py  0002_alter_ratinghistory_applied_utc.py  0003_alter_tournament_code.py  0004_playerrating_peak_mu_playerrating_peak_rd_and_more.py  0005_player_gender_partnership.py  0006_matchstatistics_playerseedrank.py  0018_calibrationbin.py  (+15 more)
config/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  confidence.js  flags.js  main.jsx  styles.css  useAsync.js
rating/: __init__.py  dominance.py  engine.py  run.py  seeding.py  types.py
scripts/: refresh_ratings.sh
tests/: test_api.py  test_calendar.py  test_canonical_event.py  test_day_matches.py  test_dominance.py  test_engine.py  test_ingest_integration.py  test_m1_acceptance.py  test_normalize_dedup.py  test_normalize_units.py  test_rate_command.py  test_wiki_parse.py
tests/fixtures/: day_matches_mm2026_2026-05-24.json  detail_mm2026.json  draw_data_mm2026_xd.json  draw_data_xd_sample.json  grouped_year_tournaments_2026.json
(+57 files in other folders)
