[project]
name = "badminton-elo"
version = "0.1.0"
description = "Per-discipline badminton rating system seeded and updated from BWF tournament results."
requires-python = ">=3.12"
dependencies = [
    "django>=5,<6",
    "djangorestframework>=3.15",   # Phase 3 serving
    "django-cors-headers>=4",       # Phase 3: React dev server CORS
    "httpx>=0.27",                  # ingestion HTTP client
    "pydantic>=2",                  # validate raw payloads before ORM writes
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-django>=4.8",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py", "tests.py"]
testpaths = ["tests"]

[tool.setuptools]
# rating/ is a pure package; apps/ and config/ are Django-managed.
packages = ["rating"]
